[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ark-bn254 = "0.4.0"
#ark-ec = "0.4.0"
ark-ff = "0.4.0"
ff = { version = "0.13", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.81", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSON
neptune = { version = "13.0.0", default_features = false }
once_cell = "1.10.0"
typenum = "1.17.0"
cty = "0.2.0"

[dev-dependencies]
num-bigint = { version = "0.3.2", features = ["rand"] }
